--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Fitness Forever</title>
+    <title>The Real Gym</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -11,22 +11,22 @@
       rel="stylesheet"
     />
     <!-- Favicon -->
-    <link href="img/favicon.ico" rel="icon">
+    <link href="img/favicon.ico" rel="icon" />
 
-    <!-- Font Awesome --> 
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
+    <!-- Font Awesome -->
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css"
+      rel="stylesheet"
+    />
 
     <!-- Flaticon Font -->
-    <link href="lib/flaticon/font/flaticon.css" rel="stylesheet">
-    <link rel="stylesheet" href="/css/style.min.css">
-    <link rel="stylesheet" href="styles.css" />
+    <link href="lib/flaticon/font/flaticon.css" rel="stylesheet" />
+
     <!-- Bootstrap CSS Link -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-      crossorigin="anonymous"
-    />
+    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="css/style.min.css"/>
+
+    <!-- Title Icon Link -->
     <link
       rel="icon"
       href="/images/fitness-forever-favicon-color.png"
@@ -35,7 +35,7 @@
   </head>
 
   <body>
-    <header>
+    <header class="main">
       <div class="custom-navbar">
         <a class="navbar-brand" href="#">
           <img
@@ -43,7 +43,7 @@
             alt="Fitness Forever Logo"
             style="width: 50px; height: 50px; border-radius: 50%"
           />
-          <span class="navbar-brand-text">Fitness Forever</span>
+          <span class="nav-links">The Real Gym</span>
         </a>
         <div class="navbar-links">
           <a class="nav-link" href="#">Home</a>
@@ -53,17 +53,16 @@
         </div>
       </div>
     </header>
-    <div class="hero-section">
+    <div class="main-hero-section">
       <div class="hero-section-text">
-        <h1>Transform Your Body, Elevate Your Mind</h1>
+        <h1 style="color: white;">Transform Your Body, Elevate Your Mind</h1>
         <p>Unleash Your Potential at Fitness Forever</p>
-      </div>
-      <a href="#about-section" class="btn btn-primary hero-section-btn"
+        <a href="#about-section" class="hero-section-btn"
         >Explore!</a
       >
+      </div>
+     
     </div>
-
-    <h2 id="about-section">About Us Section</h2>
 
     <!-- Gym Class Start -->
     <div class="container gym-class mb-5">
@@ -109,10 +108,14 @@
     <!-- Gym Class End -->
 
     <!-- About Start -->
-    <div class="container py-5">
+    <div id="#about-section" class="container py-5">
       <div class="row align-items-center">
         <div class="col-lg-6">
-          <img class="img-fluid mb-4 mb-lg-0" src="img/about.jpg" alt="Image" />
+          <img
+            class="img-fluid mb-4 mb-lg-0"
+            src="images/about.jpg"
+            alt="Image"
+          />
         </div>
         <div class="col-lg-6">
           <h2 class="display-4 font-weight-bold mb-4">10 Years Experience</h2>
@@ -193,7 +196,7 @@
     <!-- GYM Feature Start -->
     <div class="container feature pt-5">
       <div class="d-flex flex-column text-center mb-5">
-        <h4 class="text-primary font-weight-bold">Why Choose Us?</h4>
+        <h4 class="text-primary font-weight-bold" style="color: black;">Why Choose Us?</h4>
         <h4 class="display-4 font-weight-bold">
           Benifits of Joining Our Centre
         </h4>
@@ -204,10 +207,10 @@
             <div class="col-sm-5">
               <img
                 class="img-fluid mb-3 mb-sm-0"
-                src="/images/feature-1.jpg"
+                src="images/feature-1.jpg"
                 alt="Image"
               />
-              <i class="flaticon-barbell"></i>
+              <i class="flaticon-barbell" style="background-color: rgba(237, 124, 11, 1);"></i>
             </div>
             <div class="col-sm-7">
               <h4 class="font-weight-bold">Videos Instruction</h4>
@@ -224,10 +227,10 @@
             <div class="col-sm-5">
               <img
                 class="img-fluid mb-3 mb-sm-0"
-                src="/images/feature-2.jpg"
+                src="images/feature-2.jpg"
                 alt="Image"
               />
-              <i class="flaticon-training"></i>
+              <i class="flaticon-training"style="background-color: rgba(237, 124, 11, 1);"></i>
             </div>
             <div class="col-sm-7">
               <h4 class="font-weight-bold">Training Calendar</h4>
@@ -244,10 +247,10 @@
             <div class="col-sm-5">
               <img
                 class="img-fluid mb-3 mb-sm-0"
-                src="/images/feature-3.jpg"
+                src="images/feature-3.jpg"
                 alt="Image"
               />
-              <i class="flaticon-trends"></i>
+              <i class="flaticon-trends" style="background-color: rgba(237, 124, 11, 1);"></i>
             </div>
             <div class="col-sm-7">
               <h4 class="font-weight-bold">Free Apps & WiFi</h4>
@@ -264,10 +267,10 @@
             <div class="col-sm-5">
               <img
                 class="img-fluid mb-3 mb-sm-0"
-                src="/images/feature-4.jpg"
+                src="images/feature-4.jpg"
                 alt="Image"
               />
-              <i class="flaticon-support"></i>
+              <i class ="flaticon-support" style="background-color: rgba(237, 124, 11, 1);"></i>
             </div>
             <div class="col-sm-7">
               <h4 class="font-weight-bold">Community Support</h4>
@@ -308,7 +311,7 @@
                         width="80"
                         height="80"
                         class="rounded-circle bg-dark p-2"
-                        src="img/testimonial-1.jpg"
+                        src="images/testimonial-1.jpg"
                         alt="Image"
                       />
                       <div class="pl-4">
@@ -330,7 +333,7 @@
                         width="80"
                         height="80"
                         class="rounded-circle bg-dark p-2"
-                        src="img/testimonial-2.jpg"
+                        src="images/testimonial-2.jpg"
                         alt="Image"
                       />
                       <div class="pl-4">
@@ -352,7 +355,7 @@
                         width="80"
                         height="80"
                         class="rounded-circle bg-dark p-2"
-                        src="img/testimonial-3.jpg"
+                        src="images/testimonial-3.jpg"
                         alt="Image"
                       />
                       <div class="pl-4">
@@ -491,10 +494,10 @@
 
     <!-- Footer Section with Background Image and Overlay -->
     <div
-      class="container-fluid mt-5 py-5 px-sm-3 px-md-5 text-white position-relative"
+      class="footer-container container-fluid mt-5 py-5 px-sm-3 px-md-5 text-white position-relative"
       style="
         background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)),
-          url('/path/to/your-background-image.jpg');
+          url('images/footer.jpg');
         background-position: top;
         background-repeat: no-repeat;
         background-size: cover;
@@ -505,7 +508,8 @@
         <div class="col-lg-3 col-md-6 mb-3">
           <h4 class="text-orange mb-3">Get In Touch</h4>
           <p>
-            <i class="fa fa-map-marker-alt mr-2"></i>123 Street, New Delhi, India
+            <i class="fa fa-map-marker-alt mr-2"></i>123 Street, New Delhi,
+            India
           </p>
           <p><i class="fa fa-phone-alt mr-2"></i>+012 345 67890</p>
           <p><i class="fa fa-envelope mr-2"></i>info@example.com</p>
@@ -579,26 +583,15 @@
         </div>
       </div>
 
-      <!-- Overlay -->
-      <div
-        class="overlay"
-        style="
-          background: rgba(0, 0, 0, 0.7);
-          position: absolute;
-          top: 0;
-          left: 0;
-          width: 100%;
-          height: 100%;
-        "
-      ></div>
-
       <!-- Footer Text -->
       <div class="container border-top border-dark pt-3" style="z-index: 2">
         <p class="m-0 text-center text-orange">
           &copy;
           <a class="text-orange font-weight-bold" href="#">Fitness Forever</a>.
           All Rights Reserved. Designed by
-          <a class="text-orange font-weight-bold" href="https://htmlcodex.com"
+          <a
+            class="text-orange font-weight-bold"
+            href="https://github.com/manas5353"
             >Manas Sharma</a
           >
         </p>
@@ -606,10 +599,20 @@
     </div>
     <!-- Footer End -->
 
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-      crossorigin="anonymous"
-    ></script>
+   <!-- Back to Top -->
+   <a href="#" class="btn btn-outline-primary back-to-top"><i class="fa fa-angle-double-up"></i></a>
+
+
+   <!-- JavaScript Libraries -->
+   <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+   <script src="lib/easing/easing.min.js"></script>
+   <script src="lib/waypoints/waypoints.min.js"></script>
+
+   <!-- Contact Javascript File -->
+   <script src="mail/jqBootstrapValidation.min.js"></script>
+   <script src="mail/contact.js"></script>
+
+   <!-- Template Javascript -->
+   <script src="js/main.js"></script>
   </body>
 </html>
